# PJN

./: .gitignore  README.md
project-1/: README.md
project-1/apps/backend/: AGENTS.md  Makefile  analysis_tmp.txt  noun_candidates.txt  pyproject.toml  run_pipeline.py
project-1/apps/backend/data/processed/: corpus_100000_tokens.json  language_core_graph.json  semantic_bipartite_graphs.json
project-1/apps/backend/src/data/: .gitignore
project-1/apps/backend/src/processing/: common.py  corpus.py  frequency.py  language_core.py  nouns.py  semantic.py  zipf.py
project-1/apps/frontend/: AGENTS.md  index.html  package-lock.json
project-1/apps/frontend/src/: App.tsx  index.css
project-1/apps/frontend/src/commons/: PageContainer.tsx  tokenFilters.ts  types.ts
project-1/apps/frontend/src/data/: nouns_translations.json  zipf_analysis.json
project-1/apps/frontend/src/hooks/: useFrequencyTable.ts  useLanguageCore.ts  useNouns.ts  useSemanticGraphs.ts  useZipfAnalysis.ts
project-1/apps/frontend/src/screens/: Main.tsx
project-1/apps/frontend/src/screens/components/: FeatureCards.tsx  FeaturePanel.tsx  IntroSection.tsx  NavTabs.tsx
project-1/apps/frontend/src/screens/components/core/: CoreGraph.tsx  CoreSidebar.tsx  CoreTab.tsx
project-1/apps/frontend/src/screens/components/frequency/: FrequencyPagination.tsx  FrequencySummary.tsx  FrequencyTab.tsx  FrequencyTable.tsx  FrequencyToolbar.tsx
project-2/: Makefile  README.md  app.py  data.py  engine.py  pyproject.toml
project-2/static/: script.js  styles.css
project-2/templates/: index.html
(+9 files in other folders)
