[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pjn-project-2"
version = "0.1.0"
description = "Prosta aplikacja Flask do generowania zdan."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["Flask>=2.3"]

[tool.setuptools]
py-modules = ["app", "data", "engine"]
